--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/degree_text"
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:textColor="#FFF"
-        android:textSize="60sp"/>
+        android:layout_marginRight="5sp"
+        android:textSize="60sp" />
 
     <TextView
         android:id="@+id/weather_info_text"
@@ -18,5 +19,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:textColor="#FFF"
-        android:textSize="20sp"/>
+        android:layout_marginRight="5sp"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/wind_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:textColor="#FFF"
+        android:layout_marginRight="5sp"
+        android:textSize="18sp" />
+
 </LinearLayout>
