--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -4,13 +4,13 @@
     android:layout_height="?attr/actionBarSize">
 
     <Button
-        android:id="@+id/title_back_button"
-        android:layout_width="25sp"
-        android:layout_height="25sp"
+        android:id="@+id/nav_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/left" />
+        android:background="@drawable/ic_menu" />
 
     <TextView
         android:id="@+id/title_city"
@@ -18,15 +18,15 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="#FFF"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/title_update_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
         android:textColor="#FFF"
-        android:textSize="13sp"/>
+        android:textSize="13sp" />
 </RelativeLayout>
