--- a/app/src/main/res/layout/aqi.xml
+++ b/app/src/main/res/layout/aqi.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="15dp"
         android:text="空气质量"
         android:textColor="#FFF"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,8 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textColor="#FFF"
-                    android:textSize="20sp" />
+                    android:textColor="#FFF"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -66,8 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textColor="#FFF"
-                    android:textSize="20sp"/>
+                    android:textColor="#FFF"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -96,8 +94,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textColor="#FFF"
-                    android:textSize="20sp"/>
+                    android:textColor="#FFF"/>
 
                 <TextView
                     android:layout_width="wrap_content"
